--- a/_config.yml
+++ b/_config.yml
@@ -113,7 +113,7 @@ analytics:
 # Site Author
 author:
   name             : "Carlos Federico Trevino"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : "assets/images/LinkedIn Pic 2.jpeg"
   bio              : "This is my portfolio."
   location         : "Austin, Texas"
   email            : "carlos.trevino359@utexas.edu"
