--- a/_config.yml
+++ b/_config.yml
@@ -16,12 +16,12 @@ minimal_mistakes_skin    : "air" # "air", "aqua", "contrast", "dark", "dirt", "n
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Kiko's Portfolio"
+title                    : "Carlos Trevino's Personal Website"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Carlos Federico Trevino II"
-description              : "Portfolio."
-url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+description              : "Carlos Trevino's personal portfolio website."
+url                      : "https://carloskikotrevino.github.io/"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
