changed profile image

--- a/_config.yml
+++ b/_config.yml
@@ -113,7 +113,7 @@ analytics:
 # Site Author
 author:
   name             : "Carlos Federico Trevino"
-  avatar           : assets/images/LinkedIn Pic 2.jpeg
+  avatar           : assets/images/LinkedIn Pic 2 Cropped.jpeg
   bio              : "UT Austin ECE Class of 24"
   location         : "Austin, Texas"
   email            : # "carlos.trevino359@utexas.edu"
